# phd_lari

./: .gitignore  README.md  executar_pipeline.command  limpar_projeto.command  plano_projeto_comparacao_corte.md  pyproject.toml
.github/workflows/: ci.yml
config/: default.json
docs/: plano_execucao_melhoria_codigo.md  plano_projeto_comparacao_corte.md
docs/execucao/: backlog_priorizado.md  checklist_release.md  dependencias_snapshot_2026-02-11.txt  fase_01_baseline.md  fase_02_dependencias_reprodutibilidade.md  fase_03_observabilidade_loguru.md  fase_04_refatoracao_arquitetural.md  fase_05_validacao_configuracao.md  fase_06_dry_calibracao_tau.md  fase_07_resiliencia_erros_io.md  fase_08_testes_qualidade_gate.md
src/cut_precision/: __init__.py  calibration.py  cli.py  cli_args.py  config.py  distance.py  extract.py  io_utils.py  logging_config.py  metrics.py  pipeline_context.py  pipeline_service.py  preprocess.py  register.py  report.py  report_builder.py  resample.py  tau.py  tau_cli.py  tau_export.py  tau_service.py  visualize.py
tests/: test_calibration_io_report.py  test_cli_tau_policy.py  test_config_validation.py  test_distance_transform.py  test_extract_ideal.py  test_ipn.py  test_metrics.py  test_register_axes.py  test_registration_selection.py  test_resample.py  test_resilience_io.py  test_tau_calibration.py
