[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cut-precision"
version = "0.1.0"
description = "Compare ideal contour and real cut contour with objective metrics"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "opencv-python>=4.9",
  "scipy>=1.11",
  "matplotlib>=3.8",
  "scikit-image>=0.22",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
cut-precision = "cut_precision.cli:main"
cut-precision-calibrate-tau = "cut_precision.tau_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
