[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cut-precision"
version = "0.1.0"
description = "Compare ideal contour and real cut contour with objective metrics"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "opencv-python>=4.9",
  "scipy>=1.11",
  "matplotlib>=3.8",
  "scikit-image>=0.22",
  "pillow>=12.1.1",
  "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.9.7",
  "mypy>=1.14.1",
  "pip-audit>=2.9.0",
]

[project.scripts]
cut-precision = "cut_precision.cli:main"
cut-precision-calibrate-tau = "cut_precision.tau_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
files = [
  "src/cut_precision/config.py",
  "src/cut_precision/calibration.py",
  "src/cut_precision/io_utils.py",
  "src/cut_precision/report.py",
  "src/cut_precision/visualize.py",
  "src/cut_precision/tau_service.py",
]
